log
Sun, May  4, 2025  1:01:06 AM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
5729e4d
Sun, May  4, 2025  1:01:50 AM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
76cb09e
Sun, May  4, 2025  1:05:27 AM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
712f161
Sun, May  4, 2025  1:09:10 AM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'insertTreeMap':
treemap.c:53:16: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   53 |         return NULL;
      |                ^~~~
treemap.c:51:6: note: declared here
   51 | void insertTreeMap(TreeMap * tree, void* key, void * value){
      |      ^~~~~~~~~~~~~
treemap.c:55:16: warning: unused variable 'nuevo' [-Wunused-variable]
   55 |     TreeNode * nuevo = createTreeNode(key, value);
      |                ^~~~~
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
c561e59
